Morse-Name-Wayne/MorseName/bin/Release/MorseName.app/Contents/Frameworks/SGSDK.framework/Versions/3.0/Headers/SGSDK.h

#define SGSDK
line_segment sg_Geometry_LineFromVectorWithStartPoint(point2d *pt, vector *mv);
line_segment sg_Geometry_LineFromVectorWithStartXY(float x, float y, vector *mv);
int sg_Geometry_LineIntersectionPoint(line_segment *line1, line_segment *line2, point2d *pt);
int sg_Geometry_LineIntersectsCircle(line_segment *l, circle *c);
int sg_Geometry_LineIntersectsLines(line_segment *line, lines_array lines, int lines_len);
int sg_Geometry_LineIntersectsRect(line_segment *line, rectangle *rect);
shape_prototype sg_Geometry_LineListPrototypeFrom(point2d_array points, int points_len);
float sg_Geometry_LineMagnitudeSq(float x1, float y1, float x2, float y2);
float sg_Geometry_LineMagnitudeSqFromLine(line_segment *line);
point2d sg_Geometry_LineMidPoint(line_segment *line);
vector sg_Geometry_LineNormal(line_segment *line);
shape_prototype sg_Geometry_LinePrototypeFrom(point2d *startPt, point2d *endPt);
int sg_Geometry_LineSegmentsIntersect(line_segment *line1, line_segment *line2);
shape_prototype sg_Geometry_LineStripPrototypeFrom(point2d_array points, int points_len);
void sg_Geometry_LineToString(line_segment *ln, char *result);
void sg_Geometry_LinesFromRect(rectangle *rect, line_segment *result, int result_len);
void sg_Geometry_LinesFromShape(void *s, line_segment *result, int result_len);
void sg_Geometry_LinesFromTriangle(triangle tri, line_segment *result, int result_len);
void sg_Geometry_MatrixMultiply(matrix2d m1, matrix2d m2, matrix2d result);
vector sg_Geometry_MatrixMultiplyVector(matrix2d m, vector *v);
void sg_Geometry_MatrixToString(matrix2d m, char *result);
int sg_Geometry_MinimumPointsForKind(shape_kind k);