ScreenSaver/lib/sgsdk.pas

    
    try
      result := sgGeometry.LineFromVector(pt, mv);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineFromVectorWithStartPoint');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineFromVectorWithStartPoint');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineFromVectorWithStartXY(x: Single; y: Single; var mv: Vector): LineSegment; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineFromVectorWithStartXY');
    {$ENDIF}
    
    try
      result := sgGeometry.LineFromVector(x, y, mv);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineFromVectorWithStartXY');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineFromVectorWithStartXY');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineIntersectionPoint(var line1: LineSegment; var line2: LineSegment; out pt: Point2D): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineIntersectionPoint');
    {$ENDIF}
    
    try
      result := sgGeometry.LineIntersectionPoint(line1, line2, pt);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineIntersectionPoint');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineIntersectionPoint');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineIntersectsCircle(var l: LineSegment; var c: Circle): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineIntersectsCircle');
    {$ENDIF}
    
    try
      result := sgGeometry.LineIntersectsCircle(l, c);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineIntersectsCircle');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineIntersectsCircle');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineIntersectsLines(var line: LineSegment; lines: LineSegmentPtr; lines_len: LongInt): Boolean; cdecl; export;
    var
      lines_temp: LinesArray;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineIntersectsLines');
    {$ENDIF}
    
    try
        LineCopyFromPtr(lines, lines_len, lines_temp);
      result := sgGeometry.LineIntersectsLines(line, lines_temp);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineIntersectsLines');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineIntersectsLines');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineIntersectsRect(var line: LineSegment; var rect: Rectangle): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineIntersectsRect');
    {$ENDIF}
    
    try
      result := sgGeometry.LineIntersectsRect(line, rect);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineIntersectsRect');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineIntersectsRect');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineListPrototypeFrom(points: Point2DPtr; points_len: LongInt): ShapePrototype; cdecl; export;
    var
      points_temp: Point2DArray;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineListPrototypeFrom');
    {$ENDIF}
    
    try
        Point2DCopyFromPtr(points, points_len, points_temp);
      result := sgGeometry.LineListPrototypeFrom(points_temp);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineListPrototypeFrom');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineListPrototypeFrom');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineMagnitudeSq(x1: Single; y1: Single; x2: Single; y2: Single): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineMagnitudeSq');
    {$ENDIF}
    
    try
      result := sgGeometry.LineMagnitudeSq(x1, y1, x2, y2);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineMagnitudeSq');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineMagnitudeSq');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineMagnitudeSqFromLine(var line: LineSegment): Single; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineMagnitudeSqFromLine');
    {$ENDIF}
    
    try
      result := sgGeometry.LineMagnitudeSq(line);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineMagnitudeSqFromLine');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineMagnitudeSqFromLine');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineMidPoint(var line: LineSegment): Point2D; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineMidPoint');
    {$ENDIF}
    
    try
      result := sgGeometry.LineMidPoint(line);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineMidPoint');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineMidPoint');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineNormal(var line: LineSegment): Vector; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineNormal');
    {$ENDIF}
    
    try
      result := sgGeometry.LineNormal(line);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineNormal');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineNormal');
    {$ENDIF}
  end;
  
  function sg_Geometry_LinePrototypeFrom(var startPt: Point2D; var endPt: Point2D): ShapePrototype; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LinePrototypeFrom');
    {$ENDIF}
    
    try
      result := sgGeometry.LinePrototypeFrom(startPt, endPt);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LinePrototypeFrom');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LinePrototypeFrom');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineSegmentsIntersect(var line1: LineSegment; var line2: LineSegment): Boolean; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineSegmentsIntersect');
    {$ENDIF}
    
    try
      result := sgGeometry.LineSegmentsIntersect(line1, line2);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineSegmentsIntersect');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineSegmentsIntersect');
    {$ENDIF}
  end;
  
  function sg_Geometry_LineStripPrototypeFrom(points: Point2DPtr; points_len: LongInt): ShapePrototype; cdecl; export;
    var
      points_temp: Point2DArray;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineStripPrototypeFrom');
    {$ENDIF}
    
    try
        Point2DCopyFromPtr(points, points_len, points_temp);
      result := sgGeometry.LineStripPrototypeFrom(points_temp);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineStripPrototypeFrom');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineStripPrototypeFrom');
    {$ENDIF}
  end;
  
  procedure sg_Geometry_LineToString(var ln: LineSegment; result: PChar); cdecl; export;
    var
      result_temp: String;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LineToString');
    {$ENDIF}
    
    try
      result_temp := sgGeometry.LineToString(ln);
        StrCopy(result, PChar(result_temp));
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LineToString');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LineToString');
    {$ENDIF}
  end;
  
  procedure sg_Geometry_LinesFromRect(var rect: Rectangle; result: LineSegmentPtr; result_len: LongInt); cdecl; export;
    var
      result_temp: LinesArray;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LinesFromRect');
    {$ENDIF}
    
    try
      result_temp := sgGeometry.LinesFrom(rect);
        LineCopyToPtr(result_temp, result_len, result);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LinesFromRect');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LinesFromRect');
    {$ENDIF}
  end;
  
  procedure sg_Geometry_LinesFromShape(s: Shape; result: LineSegmentPtr; result_len: LongInt); cdecl; export;
    var
      result_temp: LinesArray;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LinesFromShape');
    {$ENDIF}
    
    try
      result_temp := sgGeometry.LinesFrom(s);
        LineCopyToPtr(result_temp, result_len, result);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LinesFromShape');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LinesFromShape');
    {$ENDIF}
  end;
  
  procedure sg_Geometry_LinesFromTriangle(tri: Point2DPtr; result: LineSegmentPtr; result_len: LongInt); cdecl; export;
    var
      tri_temp: Triangle;
      result_temp: LinesArray;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_LinesFromTriangle');
    {$ENDIF}
    
    try
        TriCopyFromPtr(tri_temp, tri);
      result_temp := sgGeometry.LinesFrom(tri_temp);
        LineCopyToPtr(result_temp, result_len, result);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_LinesFromTriangle');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_LinesFromTriangle');
    {$ENDIF}
  end;
  
  procedure sg_Geometry_MatrixMultiply(m1: SinglePtr; m2: SinglePtr; result: SinglePtr); cdecl; export;
    var
      m1_temp: Matrix2D;
      m2_temp: Matrix2D;
      result_temp: Matrix2D;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_MatrixMultiply');
    {$ENDIF}
    
    try
        MatrixCopyFromPtr(m1_temp, m1);
        MatrixCopyFromPtr(m2_temp, m2);
      result_temp := sgGeometry.MatrixMultiply(m1_temp, m2_temp);
        MatrixCopyToPtr(result, result_temp);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_MatrixMultiply');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_MatrixMultiply');
    {$ENDIF}
  end;
  
  function sg_Geometry_MatrixMultiplyVector(m: SinglePtr; var v: Vector): Vector; cdecl; export;
    var
      m_temp: Matrix2D;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_MatrixMultiplyVector');
    {$ENDIF}
    
    try
        MatrixCopyFromPtr(m_temp, m);
      result := sgGeometry.MatrixMultiply(m_temp, v);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_MatrixMultiplyVector');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_MatrixMultiplyVector');
    {$ENDIF}
  end;
  
  procedure sg_Geometry_MatrixToString(m: SinglePtr; result: PChar); cdecl; export;
    var
      m_temp: Matrix2D;
      result_temp: String;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_MatrixToString');
    {$ENDIF}
    
    try
        MatrixCopyFromPtr(m_temp, m);
      result_temp := sgGeometry.MatrixToString(m_temp);
        StrCopy(result, PChar(result_temp));
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_MatrixToString');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_MatrixToString');
    {$ENDIF}
  end;
  
  function sg_Geometry_MinimumPointsForKind(k: ShapeKind): LongInt; cdecl; export;
  begin
    {$IFDEF TRACE}
      TraceEnter('SGSDK.dll', 'sg_Geometry_MinimumPointsForKind');
    {$ENDIF}
    
    try
      result := sgGeometry.MinimumPointsForKind(k);
    Except on exc: Exception do 
      TrapException(exc, 'sg_Geometry_MinimumPointsForKind');
    end;  
    
    {$IFDEF TRACE}
      TraceExit('SGSDK.dll', 'sg_Geometry_MinimumPointsForKind');
    {$ENDIF}
  end;
